  similar to readline. This version is my own version, which is available here:
      https://github.com/scgray/jline2
  but should hopefully make it into the mainline soon. It adds
  support for most of the basic "vi" command set.  The only big-ticket
  missing items are undo/redo support and multi-command support 
  (like "dw" to delete-to-word, "d$" to delete to end of line, etc.).
* Added $editing_mode to allow you to set the editing keymap. Currently
  this is only supported by JLine, so to switch to "vi" mode, do:
     \set editing_mode=vi
* Added new build target called 'dist-bin'. This produces a standalone
  zip package containing a jsqsh run-time, just like 'dist', but it
  also includes the jsqsh JNI interface.
* The shell script included with 'dist' and 'dist-bin' is now wired
  to recognize if $JAQL_HOME is set and to launch jsqsh using the
  Jaql launcher so it will pick up all the necessary libraries.
* Added ${show_stack} and ${show_exclass} configuration variables that
  allow parts of exceptions to be enabled/disabled (specifically 
  displaying of the stack trace and the exception class name).
* Added --echo jsqsh flag and ${echo} variable to echo the input back out 
  to stdout. This is useful when running scripts (non-interactive mode)
  see both the SQL and commands executed as well as the results.
* Added \globals command. Right now this only works for a Jaql session,
  and displays all variables defined for the current session.
* Added "hive" as a pre-defined JDBC source.
* Changed the way in which JDBC drivers are loaded via a custom class
  path (using the ${classpath} variable).  Apparently some drivers don't
  like to be used directly to establish the connection, so this change
  will use the JDBC DriverManager to get connections.
* Removed support for ANTs DB2 SQL Skin for Sybase ASE driver. The company 
  is dead except for the nails in the coffin. Too bad, I was extremely proud of 
  what we built.