@@ -18,25 +18,19 @@
 package org.sqsh;
 
 /**
- * A formatter is used to convert a data type (usually a base java type or
- * a java.lang.sql datatype) to a readable string.
+ * Thrown by {@link Formatter} if it fails to format a value.
  */
-public interface Formatter {
+public class FormatError extends Error {
     
-    /**
-     * Returns the maximum number of characters required to display a value
-     * as a textual string.
-     * 
-     * @return The maximum number of characters required to display a value.
-     */
-    int getMaxWidth();
+    private static final long serialVersionUID = -2728322823878040372L;
 
-    /**
-     * Formats a value into a string.
-     * 
-     * @param value The value to be formatted.
-     * @return The formatted value.
-     * @throws FormatError If the formatter fails to format a value
-     */
-    String format(Object value);
+    public FormatError (String message) {
+        
+        super(message);
+    }
+    
+    public FormatError (String message, Throwable cause) {
+        
+        super(message, cause);
+    }
 }
